02-deployment-counter-postgres.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-database
  template:
    metadata:
      labels:
        app: counter-database
        app.kubernetes.io/part-of: aufgabe-lb-v1
    spec:
      containers:
        - name: counter-database
          image: quay.io/centos7/postgresql-10-centos7:20221109
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
