04-deployment-counter-backend.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: aufgabe-lb-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-backend
  template:
    metadata:
      labels:
        app: counter-backend
        deployment: counter-backend
    spec:
      containers:
        - name: counter-backend
          image: ghcr.io/schwanenseee/counter-backend:v1
          imagePullPolicy: Always
          restartPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
