12-deployment-counter-postgresadmin.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: postgresadmin
  labels:
    app: postgresadmin
    app.kubernetes.io/part-of: aufgabe-lb-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresadmin
  template:
    metadata:
      labels:
        app: postgresadmin
        deployment: postgresadmin
    spec:
      containers:
        - name: postgresadmin
          image: ghcr.io/modul-i-ch-109/pgadmin4:latest
          imagePullPolicy: Always
          restartPolicy: Always
          ports:
            - containerPort: 5050
              protocol: TCP
