03-service-counter-database.yaml
kind: Service
apiVersion: v1
metadata:
  name: counter-database
  labels:
    app: counter-database
    app.kubernetes.io/part-of: aufgabe-lb-v1
spec:
  ports:
    - name: counter-database
      protocol: TCP
      port: 5432
      targetPort: 5432
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: counter-database
