05-service-counter-backend.yaml
kind: Service
apiVersion: v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: aufgabe-lb-v1
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: counter-backend
