08-service-counter-frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: aufgabe-lb-v1
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: counter-frontend
