06-route-counter-backend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: counter-backend
  labels:
    app: counter-backend
    app.kubernetes.io/part-of: aufgabe-lb-v1
spec:
  to:
    kind: Service
    name: counter-backend
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
