09-route-counter-frontend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
    app.kubernetes.io/part-of: aufgabe-lb-v1
spec:
  to:
    kind: Service
    name: counter-frontend
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
selector:
  app: counter-frontend
