14-route-counter-postgresadmin.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: postgresadmin
  labels:
    app: postgresadmin
    app.kubernetes.io/part-of: aufgabe-lb-v1
spec:
  to:
    kind: Service
    name: postgresadmin
  port:
    targetPort: 8082-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
selector:
  app: postgresadmin
